fix: index page program slider redirectio | index page read more text alignment

--- a/public/assets_v3/css/custom.css
+++ b/public/assets_v3/css/custom.css
@@ -46,6 +46,7 @@
     border-bottom-right-radius: inherit;
     font-family: 'Outfit';
     font-size: 18px;
+    color: #0C1C33;
 }
 
 .int-program-card-item__content h5 {
